Now with sign-up with email

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <div id="joinView" class="chat-container">
     <h1 class="title">Join Chat</h1>
     <div class="flex-container">
-        <input id="usernameInput" type="text" class="input" placeholder="Enter your name" />
-        <button id="joinButton" class="button">Join</button>
+        <input id="emailInput" type="email" class="input" placeholder="Enter your email" />
+        <input id="passwordInput" type="password" class="input" placeholder="Enter your password" />
+        <button id="loginButton" class="button">Login</button>
+        <button id="signUpButton" class="button">Sign Up</button>
     </div>
 </div>
 
