Now with sign-up with email

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="flex-container">
         <input id="emailInput" type="email" class="input" placeholder="Enter your email" />
         <input id="passwordInput" type="password" class="input" placeholder="Enter your password" />
-        <button id="loginButton" class="button">Login</button>
         <button id="signUpButton" class="button">Sign Up</button>
+        <button id="loginButton" class="button">Login</button>
     </div>
 </div>
 
@@ -26,6 +26,7 @@
     </div>
         <input id="messageInput" type="text" class="input" />
             <button id="sendButton" class="send-button">Send</button>
+            <button id="logoutButton" class="button">Log Out</button>
     </div>
 </div>
 </body>
