Now with sign-up with email

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <script type="module" src="main.js"></script>
 <div id="joinView" class="chat-container">
-    <h1 class="title">Join Chat</h1>
+    <h1 class="title">355 Chat</h1>
     <div class="flex-container">
         <input id="emailInput" type="email" class="input" placeholder="Enter your email" />
         <input id="passwordInput" type="password" class="input" placeholder="Enter your password" />
