--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
   CMSC355, Sect 001
-  Group Project - Sprint 1
+  Group Project - Sprint 2
   Sawiya Aidarus, Dustin Cam, Colin Drake, Jeriel Pungtilan, James West
 -->
 
@@ -18,7 +18,7 @@
 <script type="module" src="main.js"></script>
 <!-- Users first see the login/sign up page -->
 <div id="joinView" class="chat-container">
-    <h1 class="title">355 Chat</h1>
+    <h1 class="title">Please Login to 355 Chat</h1>
     <div class="flex-container">
         <input id="emailInput" type="email" class="input" placeholder="Enter your email" />
         <input id="passwordInput" type="password" class="input" placeholder="Enter your password" />
@@ -26,7 +26,13 @@
         <button id="loginButton" class="button">Login</button>
     </div>
 </div>
-<!-- Once logged in, the group chat page is presented -->
+<!-- Once logged in, the homepage is presented for users to select the chat -->
+<div id="homeView" class="chat-container hidden">
+    <h1 class = "title">Welcome to 355 Chat</h1>
+    <button id="groupChatButton" class="button">Group Chat</button> <!-- Group Chat option, DM in sprint 3  -->
+    <button id="logoutButton" class="button">Log Out</button>
+</div>
+<!-- Group chat view is presented when selected, with messages and text input field -->
 <div id="chatsView" class="chat-container hidden">
     <div class="messages">
         <ul id="messageList" class="message-list">
@@ -34,7 +40,7 @@
     </div>
         <input id="messageInput" type="text" class="input" />
             <button id="sendButton" class="send-button">Send</button>
-            <button id="logoutButton" class="button">Log Out</button>
+            <button id="homeButton" class="button">Return Home</button> <!-- Return to homeView -->
     </div>
 </body>
 </html>
