Updated titles to match logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
   CMSC355, Sect 001
-  Group Project - Sprint 2
+  Group Project - Sprint 3
   Sawiya Aidarus, Dustin Cam, Colin Drake, Jeriel Pungtilan, James West
 -->
 
@@ -18,7 +18,7 @@
 <script type="module" src="main.js"></script>
 <!-- Users first see the login/sign up page -->
 <div id="joinView" class="chat-container">
-    <h1 class="title">Please Login to 355 Chat</h1>
+    <h1 class="title">Please Login to Chat 355</h1>
     <div class="flex-container">
         <input id="emailInput" type="email" class="input" placeholder="Enter your email" />
         <input id="passwordInput" type="password" class="input" placeholder="Enter your password" />
@@ -28,7 +28,7 @@
 </div>
 <!-- Once logged in, the homepage is presented for users to select the chat -->
 <div id="homeView" class="chat-container hidden">
-    <h1 class = "title">Welcome to 355 Chat</h1>
+    <h1 class = "title">Welcome to Chat 355</h1>
     <div class="flex-container">
         <button id="groupChatButton" class="button">Group Chat</button> <!-- Group Chat option, DM in sprint 3  -->
         <button id="logoutButton" class="button">Log Out</button>
